--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head> 
     <meta charset="UTF-8">
-    <title>Andy Day</title> 
+    <title>Lylian Tan</title> 
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Andy Day!</h1>
+    <h1>Lylian Tan!</h1>
     <h5>Lab 3-7 Works!!!</h5>
   </body>
 </html>
